// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pager renders the Pager correctly with the classic theme 1`] = `
<styled.div>
  <styled.div>
    <styled.div>
      Show 
      <Dropdown
        cacheVisibleValue={false}
        data-element="page-select"
        onChange={[Function]}
        options={
          Immutable.List [
            Immutable.Map {
              "id": "10",
              "name": 10,
            },
            Immutable.Map {
              "id": "25",
              "name": 25,
            },
            Immutable.Map {
              "id": "50",
              "name": 50,
            },
          ]
        }
        value="10"
      />
       
       records
    </styled.div>
  </styled.div>
  <WithTheme(PagerNavigation)
    currentPage="1"
    onPagination={[Function]}
    pageSize="10"
    pageSizeSelectionOptions={
      Immutable.List [
        Immutable.Map {
          "id": "10",
          "name": 10,
        },
        Immutable.Map {
          "id": "25",
          "name": 25,
        },
        Immutable.Map {
          "id": "50",
          "name": 50,
        },
      ]
    }
    setCurrentPage={[Function]}
    showPageSizeSelection={true}
    theme={
      Object {
        "colors": Object {
          "base": "#00A376",
          "baseBlue": "#255BC7",
          "border": "#668491",
          "brand": "#00DC00",
          "error": "#C7384F",
          "focus": "#FFDA7F",
          "focusedIcon": "#335B6D",
          "greyDarkBlue50": "#8099a4",
          "info": "#0073C2",
          "primary": "#00805D",
          "secondary": "#006045",
          "success": "#00B000",
          "tertiary": "#003F2E",
          "warning": "#E96400",
          "white": "#FFFFFF",
        },
        "disabled": Object {
          "background": "#E5EAEC",
          "border": "#4d7080",
          "disabled": "#b3c2c8",
          "input": "#1e499f",
          "text": "#003349",
        },
        "icon": Object {
          "focus": "#335B6D",
        },
        "name": "classic",
        "shadows": Object {
          "cards": "0 3px 3px 0 rgba(0,20,29,0.2), 0 2px 4px 0 rgba(0,20,29,0.15)",
          "depth1": "0 5px 5px 0 rgba(0,20,29,0.2), 0 10px 10px 0 rgba(0,20,29,0.1)",
          "depth2": "0 10px 20px 0 rgba(0,20,29,0.2), 0 20px 40px 0 rgba(0,20,29,0.1)",
          "depth3": "0 10px 30px 0 rgba(0,20,29,0.1), 0 30px 60px 0 rgba(0,20,29,0.1)",
          "depth4": "0 10px 40px 0 rgba(0,20,29,0.04), 0 50px 80px 0 rgba(0,20,29,0.1)",
        },
        "text": Object {
          "color": "rgba(0,0,0,0.9)",
          "placeholder": "rgba(0,0,0,0.3)",
          "size": "14px",
        },
      }
    }
    totalRecords={100}
  />
  <styled.div>
    100
     
     records
  </styled.div>
</styled.div>
`;

exports[`Pager renders the Pager correctly with the small theme 1`] = `
<styled.div>
  <styled.div>
    <styled.div>
      Show 
      <Dropdown
        cacheVisibleValue={false}
        data-element="page-select"
        onChange={[Function]}
        options={
          Immutable.List [
            Immutable.Map {
              "id": "10",
              "name": 10,
            },
            Immutable.Map {
              "id": "25",
              "name": 25,
            },
            Immutable.Map {
              "id": "50",
              "name": 50,
            },
          ]
        }
        value="10"
      />
       
       records
    </styled.div>
  </styled.div>
  <WithTheme(PagerNavigation)
    currentPage="1"
    onPagination={[Function]}
    pageSize="10"
    pageSizeSelectionOptions={
      Immutable.List [
        Immutable.Map {
          "id": "10",
          "name": 10,
        },
        Immutable.Map {
          "id": "25",
          "name": 25,
        },
        Immutable.Map {
          "id": "50",
          "name": 50,
        },
      ]
    }
    setCurrentPage={[Function]}
    showPageSizeSelection={true}
    theme={
      Object {
        "colors": Object {
          "base": "#00A376",
          "border": "#668491",
          "brand": "#00DC00",
          "error": "#C7384F",
          "focus": "#FFDA7F",
          "focusedIcon": "#335B6D",
          "info": "#0073C2",
          "primary": "#00805D",
          "secondary": "#006045",
          "success": "#00B000",
          "tertiary": "#003F2E",
          "warning": "#E96400",
          "white": "#FFFFFF",
        },
        "disabled": Object {
          "background": "#E5EAEC",
          "border": "#CCD6DA",
          "disabled": "rgba(0,0,0,0.55)",
          "input": "#F2F4F5",
          "text": "rgba(0,0,0,0.3)",
        },
        "icon": Object {
          "focus": "#335B6D",
        },
        "name": "small",
        "shadows": Object {
          "cards": "0 3px 3px 0 rgba(0,20,29,0.2), 0 2px 4px 0 rgba(0,20,29,0.15)",
          "depth1": "0 5px 5px 0 rgba(0,20,29,0.2), 0 10px 10px 0 rgba(0,20,29,0.1)",
          "depth2": "0 10px 20px 0 rgba(0,20,29,0.2), 0 20px 40px 0 rgba(0,20,29,0.1)",
          "depth3": "0 10px 30px 0 rgba(0,20,29,0.1), 0 30px 60px 0 rgba(0,20,29,0.1)",
          "depth4": "0 10px 40px 0 rgba(0,20,29,0.04), 0 50px 80px 0 rgba(0,20,29,0.1)",
        },
        "text": Object {
          "color": "rgba(0,0,0,0.9)",
          "placeholder": "rgba(0,0,0,0.3)",
          "size": "14px",
        },
      }
    }
    totalRecords={100}
  />
  <styled.div>
    100
     
     records
  </styled.div>
</styled.div>
`;
